--- a/notes/chapter_01.ipynb
+++ b/notes/chapter_01.ipynb
@@ -169,7 +169,22 @@
     "    - Model-based learning\n",
     "    \n",
     "#### 1.4.3.1 Instance-Based Learning\n",
-    "  \n",
+    "\n",
+    "- Instance-based learning is basically \"learning by heart\" or using existing examples, and flagging new examples when they\n",
+    "are identical to previous examples\n",
+    "- The other method to instance-based learning is using a *measure of similarity* where new examples are compared to previous\n",
+    "examples, and if they meet some threshold, are identified as such\n",
+    "\n",
+    "#### 1.4.3.2 Model-Based Learning\n",
+    "\n",
+    "- Model-based learning is the method of generalizing from a set of examples by building a model from those examples, and then\n",
+    "using the model to make *predictions*\n",
+    "- In order to do model-based learning, you need to specify a performance measure\n",
+    "    - This is often done through defining a *utility function* (or *fitness function*) that measures how good the model is\n",
+    "    - This can also be defined as a *cost function* (or how bad a model is)\n",
+    "    - For Linear Regression, the cost function typically revolves around a measure of distance between the predictions and\n",
+    "    the actual values, and the model works to minimize this distance\n",
+    " \n",
     "    "
    ],
    "metadata": {
@@ -181,11 +196,126 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## 1.5 Main Challenges of Machine Learning\n",
+    "\n",
+    "- The two things that can go wrong are \"bad algorithm\" and \"bad data\"\n",
+    "\n",
+    "### 1.5.1 Insufficient Quantity of Training Data\n",
+    "\n",
+    "- In general, given enough data, simple ML models can perform just as well (or better) as more complex models\n",
+    "- There is an inherent trade-off that must be considered when thinking about spending time and money on algorithm development\n",
+    "and corpus development (training data)\n",
+    "\n",
+    "### 1.5.2 Nonrepresentative Training Data\n",
+    "\n",
+    "- In order to generalize well, it is crucial that your training data be representative of the new cases you want to generalize to\n",
+    "    - It is crucial to use a training set that is representative of the cases you want to generalize to\n",
+    "    - If the sample is too small, you will have *sampling noise* (nonrepresentative data as a result of chance)\n",
+    "    - Another source of error is from *sampling bias*, when the sampling method is flawed\n",
+    "    \n",
+    "### 1.5.3 Poor-Quality Data\n",
+    "\n",
+    "- If the training data is full of errors, outliers, and noise, it will be harder for the algorithm to detect patterns, and thus\n",
+    "your system is highly likely to perform poorly\n",
+    "    - Severe outliers can be be discarded or dealt with manually\n",
+    "    - Whenever a feature is missing a lot of information, action must be taken whether it is to:\n",
+    "        - Ignore the feature\n",
+    "        - Fill in the missing values\n",
+    "        - Ignore the instances of missing values\n",
+    "        - Train two models with and without the feature\n",
+    "        \n",
+    "### 1.5.4 Irrelevant Features \n",
+    "\n",
+    "- One of the most important parts of a successful ML project is *feature engineering*, or coming up with a good set of features\n",
+    "to train on. This process involves the following steps:\n",
+    "    - *Feature selection*: selecting the most useful features to train on among existing features\n",
+    "    - *Feature extraction*: combining existing features to produce a more useful one\n",
+    "    - Creating new features by gathering new data\n",
+    "    \n",
+    "### 1.5.5 Overfitting the Training Data\n",
+    "\n",
+    "- Overfitting is when the model performs well on the training data, but does not generalize well to new data\n",
+    "    - Complex models such as deep neural networks are able to detect subtle patterns in data and because of this, if a dataset\n",
+    "    is noisy or too small, the model will likely feel like the noise is useful information\n",
+    "- Overfitting can be solved by:\n",
+    "    - Simplifying the model\n",
+    "        - Selecting a model with fewer parameters\n",
+    "        - Reducing the number of attributes in the training data\n",
+    "        - Constraining the model\n",
+    "    - Gathering more training data\n",
+    "    - Reduce the noise in the training data\n",
+    "        - Fix errors\n",
+    "        - Remove outliers\n",
+    "- Constraining a model to make it simpler and reduce the risk of overfitting is called *regularization*\n",
+    "- The ultimate objective is to find the right balance between fitting the training data and keeping the model simple so that \n",
+    "it can generalize well\n",
+    "- Regularization is typically controlled through *hyperparameters*\n",
+    "    - *Hyperparameters* are parameters of a learning algorithm and not the model itself\n",
+    "    \n",
+    "### 1.5.6 Underfitting the Training Data\n",
+    "\n",
+    "- This occurs when the model is too simple to learn the underlying structure of the data\n",
+    "- The main options for solving this problem are:\n",
+    "    - Selecting a more powerful model, with more parameters\n",
+    "    - Feed better features to the learning algorithm (feature engineering)\n",
+    "    - Reduce the constraints on the model (reduce the regularization parameters)\n",
+    "    \n",
+    "### 1.5.7 Stepping Back\n",
+    "\n",
+    "- ML is about making machines get better at some task by learning from data instead of having to explicitly code rules\n",
+    "- There are many different types of ML systems: supervised or not, batch or online, instance-based or model-based\n",
+    "- In an ML project, you gather data in a training set, feed the training set to a learning algorithm:\n",
+    "    - If the algorithm is model-based, it tunes some parameters to fit the model to the training data\n",
+    "    - If the algorithm is instance-based, it just learns the examples by heart and generalizes to new instances by using\n",
+    "     a similarity metric\n",
+    " - The system will not perform well if your training set:\n",
+    "    - Is too small\n",
+    "    - Not representative\n",
+    "    - Is noisy\n",
+    "    - Is polluted with irrelevant features"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.6 Testing and Validating\n",
+    "\n",
+    "- The only way to know how well a model will generalize to new cases is to actually try it out on new cases\n",
+    "- This is accomplished by splitting your data into two sets:\n",
+    "    - The *training set*\n",
+    "    - The *test set*\n",
+    "    - It is very common to use 80% of the data for training and 20% on testing\n",
+    "- The error rate on new cases is called the *generalization error* and this estimate can be determined by the performance \n",
+    "of the model on the *test set*\n",
+    "- If the training error is low, but the generalization error is high, it means that your model is overfitting the training\n",
+    "data\n",
+    "\n",
+    "### 1.6.1 Hyperparameter Tuning and Model Selection\n",
+    "\n",
+    "- Evaluating a model is done on the *test set*\n",
+    "- A common solution to solving generalization error on a *test set* is to use a *holdout validation* set or *validation set*\n",
+    "    - You can use this set to evaluate several models and select the best one\n",
+    "    - This is also the time to experiment with different hyperparameters\n",
+    "- The pitfalls of using a single validation set are solved through repeated *cross-validation*\n",
+    "    - This uses many small *validation sets*\n",
+    "    - Each model is evaluated once per validation set after it is training on the rest of the data\n",
+    "    - The error measure on all those models will give a better measure of the performance\n",
+    "\n",
+    "### 1.6.2 Data Mismatch\n",
+    "\n",
+    "- This is when the data is not perfectly representative of the data that will be used in production"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
