BC: chap 2 typos

--- a/notes/chapter_02.ipynb
+++ b/notes/chapter_02.ipynb
@@ -246,7 +246,7 @@
     "    - *Predictors*\n",
     "        - Estimators that are capable of making predictions are called *predictors*\n",
     "    - *Inspection*\n",
-    "        - All the estimator's hyperparameters are accessible directly via public instance variables\n",
+    "        - All the estimator's hyper-parameters are accessible directly via public instance variables\n",
     "        - All the estimator's learned parameters are accessible via public instance variables with an underscore suffix\n",
     "\n",
     "### 2.5.2 Handling Text and Categorical Attributes\n",
@@ -329,12 +329,12 @@
     "- Cross-validation allows you to get an estimate of the performance, but also how precise the estimate is\n",
     "- Building a model on top of many other models is called *ensemble learning*\n",
     "    - An example is a Random Forest\n",
-    "- A sign of overfitting is when the training set's evaluation score is much lower than the validation sets\n",
+    "- A sign of over-fitting is when the training set's evaluation score is much lower than the validation sets\n",
     "    - Possible solutions are:\n",
     "        - Constrain (regularize it)\n",
     "        - Get more data\n",
     "- Models you experiment with should be saved so that you can come back to them easily\n",
-    "    - Both the hyperparameters and the trained parameters should be saved\n",
+    "    - Both the hyper-parameters and the trained parameters should be saved\n",
     "    - Cross-validation scores should be saved\n",
     "    - Predictions could also be saved\n",
     "    - Sklearn models can easily be saved via Python's `pickle` model or using the `joblib` library"
@@ -352,20 +352,20 @@
     "\n",
     "### 2.7.1 Grid Search\n",
     "\n",
-    "- The first option to fine-tuning a model is to experiment with hyperparameters\n",
+    "- The first option to fine-tuning a model is to experiment with hyper-parameters\n",
     "- Sklearn provides the `GridSearchCV` class to perform the search for you\n",
-    "    - Tell Sklearn what hyperparameters you want it to experiment with\n",
-    "    - It will use cross-validation to evaluate all the possible combinations of hyperparameter values\n",
-    "    - When you don't know what value a hyperparameter should have, a simple approach is to try out consecutive powers of 10\n",
+    "    - Tell Sklearn what hyper-parameters you want it to experiment with\n",
+    "    - It will use cross-validation to evaluate all the possible combinations of hyper-parameter values\n",
+    "    - When you don't know what value a hyper-parameter should have, a simple approach is to try out consecutive powers of 10\n",
     "\n",
     "### 2.7.2 Randomized Search\n",
     "\n",
-    "- Randomized search is the alternative to Grid Search and is preferred when the hyperparameter space is large\n",
+    "- Randomized search is the alternative to Grid Search and is preferred when the hyper-parameter space is large\n",
     "    - Sklearn provides the `RandomizedSearchCV` class\n",
-    "    - This will evalutate a given number of random combinations by selecting a random value for each hyperparameter at every\n",
+    "    - This will evaluate a given number of random combinations by selecting a random value for each hyperparameter at every\n",
     "    iteration\n",
     "    - The two main benefits of Randomized Search are:\n",
-    "        - It will let you evaluate $x$ different values for every hyperparameter as opposed to a few using Grid Search\n",
+    "        - It will let you evaluate $x$ different values for every hyper-parameter as opposed to a few using Grid Search\n",
     "        - The number of iterations can be set so the computing budget can be controlled\n",
     "\n",
     "### 2.7.3 Ensemble Methods\n",
@@ -390,7 +390,7 @@
     "- To do so, you call `.transform()` using the pipeline you created prior\n",
     "- You might want to have an idea of how precise this estimate is and you can use the `scipy.stats.t.interval()` function\n",
     "to compute a *95% confidence interval* for the generalization error\n",
-    "- A lot of hyperparameter tuning will usually lead to a *test set* evaluation that performs slightly worse than cross-validation\n",
+    "- A lot of hyper-parameter tuning will usually lead to a *test set* evaluation that performs slightly worse than cross-validation\n",
     "- Prior to launching, you need to:\n",
     "    - Present your solution (highlighting lessons learned)\n",
     "    - What worked and what did not\n",
