BC: chap 2 typos

--- a/notes/chapter_02.ipynb
+++ b/notes/chapter_02.ipynb
@@ -237,7 +237,7 @@
     "        - Any object that can estimate some parameters based on a dataset is called an *estimator*\n",
     "        - Estimation is performed by the `.fit()` method\n",
     "        - Will generally only take the dataset as a parameter, along with the labels in a supervised learning algorithm\n",
-    "        - All other parameters are hyperparameters and must be set as an instance variable\n",
+    "        - All other parameters are hyper-parameters and must be set as an instance variable\n",
     "    - *Transformers*\n",
     "        - Estimators that can also transform the dataset (imputer is an example)\n",
     "        - Transformations are performed via the `.transform()` method\n",
