BC: chap 2 notebook edits

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -117,6 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# run the function to pull the data\n",
     "fetch_housing_data()"
    ]
   },
@@ -263,6 +264,7 @@
     }
    ],
    "source": [
+    "# create housing data dataframe\n",
     "housing = load_housing_data()\n",
     "housing.head()"
    ]
@@ -320,6 +322,7 @@
     }
    ],
    "source": [
+    "# analyze categorical column\n",
     "housing[\"ocean_proximity\"].value_counts()"
    ]
   },
@@ -1085,6 +1088,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# stratifiedshufflesplit \n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "split = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
@@ -6105,6 +6109,15 @@
    "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": false
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
